// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: loaded 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="marketplace"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    title="marketplace.page"
  />
  <Header />
  <EditionBoxes />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      marketplace.page.open_source_plugins
    </h1>
  </header>
  <Search
    query={
      Object {
        "filter": "all",
        "search": "",
      }
    }
    updateCenterActive={false}
    updateQuery={[Function]}
  />
  <PluginsList
    pending={
      Object {
        "installing": Array [],
        "removing": Array [],
        "updating": Array [],
      }
    }
    plugins={Array []}
    readOnly={true}
    refreshPending={[MockFunction]}
  />
  <Footer
    total={0}
  />
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="marketplace"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    title="marketplace.page"
  />
  <Header />
  <EditionBoxes />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      marketplace.page.open_source_plugins
    </h1>
  </header>
  <Search
    query={
      Object {
        "filter": "all",
        "search": "",
      }
    }
    updateCenterActive={false}
    updateQuery={[Function]}
  />
  <i
    className="spinner"
  />
</div>
`;
